run.sh simplified