@@ -23,49 +23,27 @@ if [ -z "${JVM_DIRECT_MEMORY_SIZE}" ]; then
     echo -e "${LEVEL_INFO} JVM_DIRECT_MEMORY_SIZE env variable not specified. Using ${JVM_DIRECT_MEMORY_SIZE} as default"
 fi
 
-CAN_START=true
-PARAMS=""
+trap 'kill -TERM ${JAVA_PID}' TERM INT
 
-if [ -z "${REDIS_NODES}" ]; then
-    echo -e "${LEVEL_ERROR} REDIS_NODES env var not specified. This SOTAC instance can't store session information" 1>&2
-    CAN_START=false
-fi
+java \
+-server \
+-Xms${JVM_HEAP_MEMORY_SIZE}m \
+-Xmx${JVM_HEAP_MEMORY_SIZE}m \
+-XX:MaxDirectMemorySize=${JVM_DIRECT_MEMORY_SIZE}M \
+-XX:MaxMetaspaceSize=100m \
+-XX:+UseParallelGC \
+-XX:+DisableExplicitGC \
+-XX:+UseStringDeduplication \
+-XX:+AggressiveOpts \
+-Dsun.rmi.dgc.client.gcInterval=3600000 \
+-Dsun.rmi.dgc.server.gcInterval=3600000 \
+-XX:OnOutOfMemoryError="kill -9 %p" \
+-jar ${JAR} &
 
-if [ "${CAN_START}" = true ]; then
+JAVA_PID=$!
 
-    trap 'kill -TERM ${JAVA_PID}' TERM INT
+wait ${JAVA_PID}
+exit $?
 
-    java \
-    -server \
-    -Xms${JVM_HEAP_MEMORY_SIZE}m \
-    -Xmx${JVM_HEAP_MEMORY_SIZE}m \
-    -XX:MaxDirectMemorySize=${JVM_DIRECT_MEMORY_SIZE}M \
-    -XX:MaxMetaspaceSize=100m \
-    -XX:+UseParallelGC \
-    -XX:+DisableExplicitGC \
-    -XX:+UseStringDeduplication \
-    -XX:+AggressiveOpts \
-    -Dsun.rmi.dgc.client.gcInterval=3600000 \
-    -Dsun.rmi.dgc.server.gcInterval=3600000 \
-    -XX:OnOutOfMemoryError="kill -9 %p" \
-    -verbose:gc \
-    -XX:+PrintGCDetails \
-    -XX:+PrintGCTimeStamps \
-    -XX:+PrintGCDateStamps \
-    -XX:+PrintAdaptiveSizePolicy \
-    -XX:+PrintTenuringDistribution \
-    -XX:+PrintStringDeduplicationStatistics \
-    -Dio.netty.leakDetectionLevel=${NETTY_LEAK_DETECTION_LEVEL:-simple} \
-    ${PARAMS} \
-    -jar ${JAR} &
 
-    JAVA_PID=$!
-
-    wait ${JAVA_PID}
-    exit $?
-
-else
-    echo -e "${LEVEL_ERROR} Some of mandatory environment variables variables was not specified. Exiting"
-    exit 1
-fi
 
